# Recolor

./: .gitignore  CMakeLists.txt  README.md  setup.sh
Android/jni/src/: Android.mk  game_io.c  game_io.h  game_rand.c  game_rand.h  recolor_solve.h  sdl_recolor_text.c  sdl_utilitary_functions.c  sdl_utilitary_functions.h  utilitary_functions_solver.c
Android/jni/src/data/: h_8_10.rec
data/solver/: h_16.rec
dependency_projects/: linux.sh  mac.sh
doc/: ToDo.txt
include/: game_io.h  recolor_solve.h  sdl_utilitary_functions.h
src/: CMakeLists.txt  game.c  game_io.c  game_rand.c  recolor_solve.c  recolor_text.c  sdl_recolor_text.c  sdl_utilitary_functions.c  utilitary_functions_solver.c
tests/: CMakeLists.txt  test_game_alemarty.c  test_game_gsouton.c  test_game_klaveau.c  test_game_tlaveau.c
